// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshots when active 1`] = `
<div
  className="src-shared-components-Button-style___button___ngAZY2   BUTTON_CLASS src-shared-components-Button-style___active___3Gx8NP   ACTIVE_CLASS"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
  BUTTON
</div>
`;

exports[`Matches snapshots when disabled 1`] = `
<div
  className="src-shared-components-Button-style___button___ngAZY2   BUTTON_CLASS src-shared-components-Button-style___disabled___3uMacK   DISABLED_CLASS"
>
  BUTTON
</div>
`;

exports[`Matches snapshots when disabled 2`] = `
<div
  className="src-shared-components-Button-style___button___ngAZY2   BUTTON_CLASS src-shared-components-Button-style___disabled___3uMacK"
>
  BUTTON
</div>
`;

exports[`Matches snapshots when rendered as link 1`] = `
<a
  className="src-shared-components-Button-style___button___ngAZY2   BUTTON_CLASS src-shared-components-Button-style___active___3Gx8NP   ACTIVE_CLASS"
  disabled={false}
  href="/SOME/TEST/URL"
  onClick={[Function]}
  onMouseDown={null}
>
  BUTTON
</a>
`;
